--- a/WiFiLib/library.properties
+++ b/WiFiLib/library.properties
@@ -1,9 +1,11 @@
 name=WiFiLib
 version=1.0.0
-author=paul
-maintainer=paul
-sentence=WiFiLib Library
-paragraph=
-category=Uncategorized
-url=https://github/WiFiLib
-architectures=*
+author=Paul Bearne
+maintainer=paul Bearne
+sentence=WiFiLib Library functions for standard non blocking wifi AP and Station
+paragraph=WiFiLib non blocking wifi startup starts an access point and connects to 
+          local access point
+category=Communication
+url=https://github/WiFiTaskLib
+architectures=esp32
+includes=WiFiLib.h
