--- a/WiFiLib/library.properties
+++ b/WiFiLib/library.properties
@@ -6,6 +6,6 @@ sentence=WiFiLib Library functions for standard non blocking wifi AP and Station
 paragraph=WiFiLib non blocking wifi startup starts an access point and connects to 
           local access point
 category=Communication
-url=https://github/WiFiTaskLib
+url=https://github.com/paulbearne/WiFiLib
 architectures=esp32
 includes=WiFiLib.h
